--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ cffi==1.15.0
 charset-normalizer==2.0.10
 click==8.0.3
 coverage==6.3
+coveralls==3.3.1
 cryptography==36.0.1
+docopt==0.6.2
 Flask==2.0.2
 Flask-Cors==3.0.10
 Flask-Migrate==3.1.0
@@ -38,7 +40,6 @@ pylint==2.12.2
 PyMySQL==1.0.2
 pyparsing==3.0.6
 pytest==6.2.5
-python-coveralls==2.9.3
 python-dateutil==2.8.2
 python-dotenv==0.19.2
 pytz==2021.3
