--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install .
   - pip install pytest-cov
 
-script: pytest --cov=rest --cov-append=service
+script: pytest --cov=.
 
 after_success:
   - coveralls
