--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ install:
   - pip install .
   - pip install pytest-cov
 
-script: pytest --cov=.
+script:
+  - pytest --cov=.
+  - pylint
 
 after_success:
   - coveralls
