--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,9 @@ py==1.11.0
 pycparser==2.21
 PyJWT==2.3.0
 pylint==2.12.2
+pylint-flask==0.6
+pylint-flask-sqlalchemy==0.2.0
+pylint-plugin-utils==0.7
 PyMySQL==1.0.2
 pyparsing==3.0.6
 pytest==6.2.5
